css/style.css
/* ... */
.content p {
  margin: 0;
  font-size: 18px;
  color: white;
  line-height: 30px;
  letter-spacing: 1px;
}

.title > h1 {
  margin: 0;
  text-transform: uppercase;
  font-size: 26px;
  letter-spacing: 2px;
  font-weight: bold;
}

.edu {
  padding-left: 10em;
}

.white-background .title h1 {
  color: #deeef5 !important;
  /*border: 1px solid #4D7F8E;*/
  width: 32%;
  border-radius: 50px;
  padding: 10px 0 2px 20px;
  background-color: #4C8191;
  max-width: 170px;
  min-width: 145px;
}


.blue-background .title h1 {
  color: white !important;
  font-family: "Ostrich Sans", "Raleway", Verdana !important;
  border: 1px solid #4D7F8E;
  width: 32%;
  border-radius: 50px;
  padding: 10px 0 2px 25px;
  background-color: #353857;
  max-width: 170px;
  min-width: 155px;
}

.white-background p {
  color: #4b9aab !important;
}

.white-background h2 {
  font-family: "Ostrich Sans", "Raleway", Verdana !important;
  font-weight: bold !important;
  color: #4b9aab;
}

.title h1:after {
  content: ' ';
  display: block;
  width: 50px;
  margin: 10px 0;
}

#ya {
      transform: translateY(0);
}

.title {
  float: left;
  /*width: 20%;*/
  padding-left: 30px;
  padding-top: 10px;
}

.content {
  float: right;
  width: 70%;
  padding-left: 10px;
}

.explogos {
  float: right;
  /*padding: 5px;*/
}

.projects {
  border: 1.3px solid rgba(75, 154, 171, 1) !important;
  border-radius: 35px;
  padding: 10px;
  color: grey;
  margin-bottom: 20px;
  width: 90%;
  position: relative;
  transition: opacity 0.5s;
  -webkit-transition: all ease-in 0.9s;
  -moz-transition: all ease-in 0.9s;
  -o-transition: all ease-in 0.9s;
  -ms-transition: all ease-in 0.9s ;
  transition: all ease-in 0.9s;
}

.jobs {
  background-color: #4A7C8D;
  border: 2px solid  #4D7F8E;
  box-shadow: 0 0 10px #333;
  border-radius: 50px;
  padding: 30px;
  color: grey;
  margin-bottom: 20px;
  margin: 20px;
  width: 90%;
  position: relative;
  transition: opacity 0.5s;
  -webkit-transition: all ease-in 0.9s;
  -moz-transition: all ease-in 0.9s;
  -o-transition: all ease-in 0.9s;
  -ms-transition: all ease-in 0.9s ;
  transition: all ease-in 0.9s;
}

/* Shadow Radial */
.hvr-shadow-radial {
  width: 350px;
  height: 170px;
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  box-shadow: 0 0 15px #333;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  position: relative;
}

.hvr-shadow-radial:before, .hvr-shadow-radial:after {
  pointer-events: none;
  position: absolute;
  content: '';
  left: 0;
  width: 100%;
  box-sizing: border-box;
  background-repeat: no-repeat;
  height: 5px;
  opacity: 0;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: opacity;
  transition-property: opacity;
}
.hvr-shadow-radial:before {
  bottom: 100%;
  background: -webkit-radial-gradient(50% 150%, ellipse, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 80%);
  background: radial-gradient(ellipse at 50% 150%, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 80%);
}
.hvr-shadow-radial:after {
  top: 100%;
  background: -webkit-radial-gradient(50% -50%, ellipse, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 80%);
  background: radial-gradient(ellipse at 50% -50%, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 80%);
}
.hvr-shadow-radial:hover:before, .hvr-shadow-radial:focus:before, .hvr-shadow-radial:active:before, .hvr-shadow-radial:hover:after, .hvr-shadow-radial:focus:after, .hvr-shadow-radial:active:after {
  opacity: 1;
}

.inner-jobs {
  padding-left: 8px;
}

.jobs:hover {
  background: rgba(255,255,255,0.1);
}

/*skills*/
.parent-skills {
  margin: 0 auto;
}
.skills-diagram {
  font-size: 16px;
  font-weight: bold;
  text-align: center;
  max-width: 60em;
  margin: 2em auto 2em;
  margin-right: 3.5em;
  float: left;
}
.skills-diagram > dd {
  /* Hide inner attributes */
  display: none;
}
.skills-diagram dt {
  display: inline-block;
  vertical-align: top;
  
  border-style: solid;
  border-width: 1px;
  border-radius: 50%;
  
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -o-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
  
  /* set defaults to skill-2 */
  width: 2em;
  height: 2em;
  line-height: 2em;
}

.skills-diagram dt:hover {
  -webkit-transform: scale(1.3);
  -moz-transform: scale(1.3);
  -o-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

/* Support vertical mode */
.skills-diagram-vertical dt {
  display: block;
  /* .25em is an equivalent to inline-block's horizontal whitespace margin */
  margin: .25em auto;
  font-family: "Ostrich Sans", Verdana !important;
}


.skills-diagram .skill-2 {
    background: linear-gradient(to top, #D19BA8 0%, #4C7F90 100%);
}
.skills-diagram .skill-2 {
  width: 5.5em;
  height: 5em;
  line-height: 5em;
  font-family: "Ostrich Sans", Verdana;
  border-color: #80c5de;
  color: white;
  opacity: 0.7;
}

.skills-diagram .skill-3 {
    background: linear-gradient(to top, #D19BA8 0%, #4C7F90 100%);
}

.skills-diagram .skill-3 {
  vertical-align: middle;
  opacity: 0.7;
  width: 3em;
  height: 3em;
  line-height: 3em;
  font-family: "Ostrich Sans", Verdana;
  color: white;
}

.skills-diagram .skill-6 {
  background-image: -ms-linear-gradient(bottom, #243054 0%, #51B0BF 100%);
  background-image: -moz-linear-gradient(bottom, #243054 0%, #51B0BF 100%);
  background-image: -o-linear-gradient(bottom, #243054 0%, #51B0BF 100%);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #243054), color-stop(100, #51B0BF));
  background-image: -webkit-linear-gradient(bottom, #243054 0%, #51B0BF 100%);
  background-image: linear-gradient(to bottom, #243054 0%, #51B0BF 100%);
}
/* ... */

